[tool.poetry]
name = "flightc02tracker"
version = "0.1.0"
description = ""
authors = ["Nathan Perkins <nathanjp91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.85.1"
python-dotenv = "^0.21.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
motor = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
